--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bk-bk-rabbitmq-pubsub",
-  "version": "0.1.0",
+  "name": "bk-rabbitmq-pubsub",
+  "version": "0.1.1",
   "description": "Library for rabbitmq and use pubsub service",
   "main": "src/index.js",
   "scripts": {
