--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "amqplib": "^0.5.2",
+    "amqplib-auto-recovery": "^0.2.0",
     "bunyan": "1.8.10",
     "uuid": "3.0.1"
   },
